--- a/index.html
+++ b/index.html
@@ -15,12 +15,58 @@
             <div class="nav-logo border">
                 <div class="logo"></div>
             </div>
-            <div class="nav-address">
+            <div class="nav-address border">
                 <p class="address-first">Deliver to</p>
-                <div class="add-icon">
+                <div class="address-icon">
                     <i class="fa-solid fa-location-dot"></i>
-                    <p class="address-second">India</p>
+                    <p class="address-second">Bangladesh</p>
                 </div>
+            </div>
+            <div class="nav-search">
+                <select class="search-select">
+                    <option value="">All</option>
+                    <option value="">Baby</option>
+                    <option value="">Books</option>
+                    <option value="">Deals</option>
+                    <option value="">Computers</option>
+                    <option value="">Electronics</option>
+                    <option value="">Fashion</option>
+                    <option value="">Home & Kitchen</option>
+                    <option value="">Toys & Games</option>
+                    <option value="">Beauty</option>
+                    <option value="">Grocery</option>
+                    <option value="">Sports</option>
+                    <option value="">Mobile Phones</option>
+                    <option value="">Watches</option>
+                    <option value="">Furniture</option>
+                </select>
+                <input type="text" placeholder="Search Amazon" class="search-input">
+                <div class="search-icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+            </div>
+            <div class="nav-language border">
+                <select class="search-language">
+                 <option value="en">English (US) </option>
+                    <option value="bn">বাংলা (BD)</option>
+                    <option value="es">Español (ES)</option>
+                    <option value="fr">Français (FR)</option>
+                    <option value="de">Deutsch (DE)</option>
+                    <option value="hi">हिन्दी (IN)</option>
+                    <option value="zh">中文 (CN)</option>          
+                </select>
+
+            </div>
+            <div class="nav-signIn border">
+                <p><span>Hello, sign in</span></p>
+                <p class="nav-second">Account & Lists</p>
+            </div>
+            <div class="nav-return border">
+                <p><span>Returns</span></p>
+                <p class="nav-second">& Orders</p>
+            </div>
+            <div class="nav-cart">
+                <i class="fa-solid fa-cart-shopping"></i> Cart
             </div>
         </div>
     </header>
