--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <p><span>Returns</span></p>
                 <p class="nav-second">& Orders</p>
             </div>
-            <div class="nav-cart">
+            <div class="nav-cart border">
                 <i class="fa-solid fa-cart-shopping"></i> Cart
             </div>
         </div>
