Working on panel

--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
                 <i class="fa-solid fa-cart-shopping"></i> Cart
             </div>
         </div>
+        <div class="panel">
+            <div class="panel-all">
+                <i class="fa-solid fa-bars"></i> All
+            </div>
+            <div class="panel-options">
+                <p>Today's Deals</p>
+                <p>Registry</p>
+                <p>Prime Video</p>
+                <p>Gift Cards</p>
+                <p>Customer Service</p>
+                <p>Sell</p>
+            </div>
+        </div>
     </header>
 </body>
 
