Nav Panel  Complete

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                 <p>Customer Service</p>
                 <p>Sell</p>
             </div>
+            <div class="panel-deals">Shop Deals In Electronics</div>
         </div>
     </header>
 </body>
