--- a/index.html
+++ b/index.html
@@ -84,6 +84,13 @@
             <div class="panel-deals">Shop Deals In Electronics</div>
         </div>
     </header>
+    <div class="hero-section">
+        <div class="hero-message">
+            <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery.
+                <a href="">Click here to go to amazon.in</a>
+            </p>
+        </div>
+    </div>
 </body>
 
 </html>
