--- a/index.html
+++ b/index.html
@@ -91,6 +91,129 @@
             </p>
         </div>
     </div>
+    <div class="shop-section">
+        <div class="box1 box">
+            <div class="box-content">
+                <h2>Gaming accessories</h2>
+                <div class="box-image" style="background-image: url('./assets/images/box1.jpg'); "></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box2 box">
+            <div class="box-content">
+                <h2>Gifts for Dad under $25</h2>
+                <div class="box-image" style="background-image: url('./assets/images/box2.jpg'); "></div>
+                <p>See all deals</p>
+            </div>
+        </div>
+        <div class="box3 box">
+            <div class="box-content">
+                <h2>Top categories in Kitchen appliances</h2>
+                <div class="box-image" style="background-image: url('./assets/images/box3.jpg'); "></div>
+                <p>See all deals</p>
+            </div>
+        </div>
+        <div class="box4 box">
+            <div class="box-content">
+                <h2>Dinnerware & accessories</h2>
+                <div class="box-image" style="background-image: url('./assets/images/box4.jpg'); "></div>
+                <p>See all deals</p>
+            </div>
+
+        </div>
+        <div class="box1 box">
+            <div class="box-content">
+                <h2>Gaming accessories</h2>
+                <div class="box-image" style="background-image: url('./assets/images/box1.jpg'); "></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box2 box">
+            <div class="box-content">
+                <h2>Gifts for Dad under $25</h2>
+                <div class="box-image" style="background-image: url('./assets/images/box2.jpg'); "></div>
+                <p>See all deals</p>
+            </div>
+        </div>
+        <div class="box3 box">
+            <div class="box-content">
+                <h2>Top categories in Kitchen appliances</h2>
+                <div class="box-image" style="background-image: url('./assets/images/box3.jpg'); "></div>
+                <p>See all deals</p>
+            </div>
+        </div>
+        <div class="box4 box">
+            <div class="box-content">
+                <h2>Dinnerware & accessories</h2>
+                <div class="box-image" style="background-image: url('./assets/images/box4.jpg'); "></div>
+                <p>See all deals</p>
+            </div>
+
+        </div>
+        <div class="box1 box">
+            <div class="box-content">
+                <h2>Gaming accessories</h2>
+                <div class="box-image" style="background-image: url('./assets/images/box1.jpg'); "></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box2 box">
+            <div class="box-content">
+                <h2>Gifts for Dad under $25</h2>
+                <div class="box-image" style="background-image: url('./assets/images/box2.jpg'); "></div>
+                <p>See all deals</p>
+            </div>
+        </div>
+        <div class="box3 box">
+            <div class="box-content">
+                <h2>Top categories in Kitchen appliances</h2>
+                <div class="box-image" style="background-image: url('./assets/images/box3.jpg'); "></div>
+                <p>See all deals</p>
+            </div>
+        </div>
+        <div class="box4 box">
+            <div class="box-content">
+                <h2>Dinnerware & accessories</h2>
+                <div class="box-image" style="background-image: url('./assets/images/box4.jpg'); "></div>
+                <p>See all deals</p>
+            </div>
+
+        </div>
+        <div class="box1 box">
+            <div class="box-content">
+                <h2>Gaming accessories</h2>
+                <div class="box-image" style="background-image: url('./assets/images/box1.jpg'); "></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box2 box">
+            <div class="box-content">
+                <h2>Gifts for Dad under $25</h2>
+                <div class="box-image" style="background-image: url('./assets/images/box2.jpg'); "></div>
+                <p>See all deals</p>
+            </div>
+        </div>
+        <div class="box3 box">
+            <div class="box-content">
+                <h2>Top categories in Kitchen appliances</h2>
+                <div class="box-image" style="background-image: url('./assets/images/box3.jpg'); "></div>
+                <p>See all deals</p>
+            </div>
+        </div>
+        <div class="box4 box">
+            <div class="box-content">
+                <h2>Dinnerware & accessories</h2>
+                <div class="box-image" style="background-image: url('./assets/images/box4.jpg'); "></div>
+                <p>See all deals</p>
+            </div>
+
+        </div>
+
+
+    </div>
+
+
+    </div>
 </body>
 
 </html>
