--- a/index.html
+++ b/index.html
@@ -207,12 +207,52 @@
 
 
     </div>
-
-
     </div>
-
-
     </div>
+    <footer>
+        <div class="foot-panel1">Back to Top</div>
+        <div class="foot-panel2">
+            <ul>
+                <p>Get to Know Us</p>
+                <a href="">Careers</a>
+                <a href="">Blog</a>
+                <a href="">About Amazon</a>
+                <a href="">Investor Relations</a>
+                <a href="">Amazon Devices</a>
+                <a href="">Amazon Science</a>
+            </ul>
+            <div class="foot-panel2">
+                <ul>
+                    <p>Get to Know Us</p>
+                    <a href="">Careers</a>
+                    <a href="">Blog</a>
+                    <a href="">About Amazon</a>
+                    <a href="">Investor Relations</a>
+                    <a href="">Amazon Devices</a>
+                    <a href="">Amazon Science</a>
+                </ul>
+                <div class="foot-panel2">
+                    <ul>
+                        <p>Get to Know Us</p>
+                        <a href="">Careers</a>
+                        <a href="">Blog</a>
+                        <a href="">About Amazon</a>
+                        <a href="">Investor Relations</a>
+                        <a href="">Amazon Devices</a>
+                        <a href="">Amazon Science</a>
+                    </ul>
+                    <div class="foot-panel2">
+                        <ul>
+                            <p>Get to Know Us</p>
+                            <a href="">Careers</a>
+                            <a href="">Blog</a>
+                            <a href="">About Amazon</a>
+                            <a href="">Investor Relations</a>
+                            <a href="">Amazon Devices</a>
+                            <a href="">Amazon Science</a>
+                        </ul>
+                    </div>
+    </footer>
 </body>
 
 </html>
